--- a/newDesign/register.html
+++ b/newDesign/register.html
@@ -74,7 +74,7 @@
             <h1>Merchant Registration</h1>
             <p>Merchant Details</p>
 
-            <form id="msform" action="https://formspree.io/kfir_m@optimove.com" method="POST">
+            <form id="msform" action="https://formspree.io/noreplymerchants@openpay.com.au" method="POST">
                 <!-- progressbar -->
                 <ul id="progressbar">
                     <li class="active"></li>
@@ -84,28 +84,28 @@
                 <!-- fieldsets -->
                 <fieldset class="step1">
                     <h2 class="fs-title">Product Details</h2>
-                    <input class="require" type="text" name="nf-field-1" placeholder="Merchant name" />
-                    <input type="text" name="nf-field-2" placeholder="Known trader names" />
-                    <input type="text" name="nf-field-3" placeholder="Corporate entity name" />
-                    <input type="text" name="nf-field-4" placeholder="ACN/ABN" />
-                    <input type="text" name="nf-field-5" placeholder="Corporate entity address" />
-                    <textarea class="require" name="nf-field-6" placeholder="Store location(s)" rows="1"></textarea>
-                    <select name="nf-field-7">
+                    <input class="require" type="text" name="Merchant name" placeholder="Merchant name" />
+                    <input type="text" name="Known trader names" placeholder="Known trader names" />
+                    <input type="text" name="Corporate entity name" placeholder="Corporate entity name" />
+                    <input type="text" name="ACN/ABN" placeholder="ACN/ABN" />
+                    <input type="text" name="Corporate entity address" placeholder="Corporate entity address" />
+                    <textarea class="require" name="Store location(s)" placeholder="Store location(s)" rows="1"></textarea>
+                    <select name="model">
                         <option value="100% corporate owned">100% corporate owned</option>
                         <option value="Mix of Corporate Owned &amp; Independently Owned (Partially Franchised)">Mix of Corporate Owned &amp; Independently Owned (Partially Franchised)</option>
                         <option value="Franchise model">Franchise model</option>
                     </select>
-                    <input  class="require" type="text" name="nf-field-33" placeholder="Annual corporate turnover" />
-                    <input type="text" name="nf-field-8" placeholder="Date company started trading" />
+                    <input  class="require" type="text" name="Annual corporate turnover" placeholder="Annual corporate turnover" />
+                    <input type="text" name="Date company started trading" placeholder="Date company started trading" />
                     <p>Are you insured?  </p>
                     <ul>
                         <li>
-                            <input type="checkbox" name="nf-field-9" value="product liability">
+                            <input type="checkbox" name="product liability" value="product liability">
                             <label>Product liability</label>
                             <div class="clear"></div>
                         </li>
                         <li>
-                            <input type="checkbox" name="nf-field-10" value="professional indemnity">
+                            <input type="checkbox" name="professional indemnity" value="professional indemnity">
                             <label>Professional indemnity</label>
                             <div class="clear"></div>
                         </li>
@@ -116,15 +116,15 @@
                 </fieldset>
                 <fieldset class="step2">
                     <h2 class="fs-title">Product Details</h2>
-                    <input type="text" name="nf-field-11" placeholder="Products sold by merchant" />
-                    <input type="text" name="nf-field-12" placeholder="Products proposed to be financed by Openpay" />
-                    <input type="text" name="nf-field-13" placeholder="Products excluded from Openpay financing" />
-                    <input type="text" name="nf-field-14" placeholder="Target demographic" />
+                    <input type="text" name="Products sold by merchant" placeholder="Products sold by merchant" />
+                    <input type="text" name="Products proposed to be financed by Openpay" placeholder="Products proposed to be financed by Openpay" />
+                    <input type="text" name="Products excluded from Openpay financing" placeholder="Products excluded from Openpay financing" />
+                    <input type="text" name="Target demographic" placeholder="Target demographic" />
 
                     <p>Method of sale  </p>
                     <ul>
                         <li>
-                            <input type="checkbox" name="nf-field-15" value="in-store">
+                            <input type="checkbox" name="in-store" value="in-store">
                             <label>In store</label>
                             <div class="clear"></div>
                         </li>
@@ -154,15 +154,15 @@
                 </fieldset>
                 <fieldset class="step3">
                     <h2 class="fs-title">Confirm Registration</h2>
-                    <input class="require" type="text" name="nf-field-17" placeholder="First Name" />
-                    <input class="require" type="text" name="nf-field-18" placeholder="Last Name" />
-                    <input class="require" type="email" name="nf-field-19" placeholder="Email" />
-                    <textarea name="nf-field-20" placeholder="Address"></textarea>
+                    <input class="require" type="text" name="First Name" placeholder="First Name" />
+                    <input class="require" type="text" name="Last Name" placeholder="Last Name" />
+                    <input class="require" type="email" name="Email" placeholder="Email" />
+                    <textarea name="Address" placeholder="Address"></textarea>
 
 
                     <ul>
                         <li>
-                            <input class="require" type="checkbox" name="nf-field-21" value="in-store">
+                            <input class="require" type="checkbox" name="TNC" value="TNC">
                             <label style="width: 380px;">By ticking this box you acknowledge accessing, reading and agreeing to the terms of <a href="#" target="_blank">this document</a> and our <a href="http://www.openpay.com.au/privacy-policy/" target="_blank">privacy policy</a>. <span class="ninja-forms-req-symbol">*</span> </label>
                             <div class="clear"></div>
                         </li>
