--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -144,11 +144,11 @@
 						<h3>Fashion</h3>
 					</div>
 				</div>
-				<div class="col-4">
+				<!-- <div class="col-4">
 					<div class="marketToProvide cat-3" data-value="209004">
 						<h3>Lifestyle</h3>
 					</div>
-				</div>
+				</div> -->
 				<div class="col-4">
 					<div class="marketToProvide cat-4" data-value="209007">
 						<h3>Beauty</h3>
