Minor copy and colour.

--- a/newDesign/business.html
+++ b/newDesign/business.html
@@ -73,7 +73,7 @@
             <div class="heroInfo">
                 <h1>Enable new audiences</h1>
                 <p>
-                    Give your existing and future customers change to the way they pay.
+                    Let existing and new customers choose how they want to pay. 
                 </p>
                 <div class="btnBox">
 
