--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -7,6 +7,7 @@
     <title>Openpay - Buy now, Pay Smarter</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-84225706-1"></script>
+	<meta name="google-site-verification" content="UsHzCDI4yOj3IxyIHT8cqcp49eBr1Uz2lNTT9bhJn88" />
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
