Separated legal css like other pages.

--- a/newDesign/legal.html
+++ b/newDesign/legal.html
@@ -33,7 +33,7 @@
         })(window,document,window['_fs_namespace'],'script','user');
     </script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,600" rel="stylesheet">
-    <link rel="stylesheet" href="./css/help.css" />
+    <link rel="stylesheet" href="./css/legal.css" />
     <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
