--- a/newDesign/404.html
+++ b/newDesign/404.html
@@ -70,9 +70,9 @@
 
     <div class="helpContent greyPane">
         <div class="bodyContainer">
-            <h1>The Legal Stuff</h1>
-            <p>Find all the important compliance infomation that governs our industry and more. <br>Get familar with it. <a href="help.html#contact"> Contact us</a> know if you have questions. </p>
-            <br>
+            <h1>Opps, a page has gone walk about. </h1>
+            <p><strong>It's a 404 error.</strong></p>
+            <p>Look's like this page doesn't exist, has been misplaced or been mistyped. <br>Check the URL and try again or <a href="index.html">go back home</a> </p>
             
         </div>
         <div class="bodyContainer">
