Minor text change to 404

--- a/newDesign/404.html
+++ b/newDesign/404.html
@@ -70,7 +70,7 @@
 
     <div class="helpContent greyPane">
         <div class="bodyContainer">
-            <h1>Opps, a page has gone walk about. </h1>
+            <h1>Opps, something happened. </h1>
             <p><strong>It's a 404 error.</strong></p>
             <p>Look's like this page doesn't exist, has been misplaced or been mistyped. <br>Check the URL and try again or <a href="index.html">go back home</a> </p>
             
