--- a/newDesign/bunnings/index.html
+++ b/newDesign/bunnings/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="../images/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Openpay - Bunnings</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -33,16 +33,16 @@
         })(window,document,window['_fs_namespace'],'script','user');
     </script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,600" rel="stylesheet">
-    <link rel="stylesheet" href="./css/bunnings.css" />
-    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="../css/bunnings.css" />
+    <link rel="stylesheet" href="../css/nav.css">
 </head>
 <body>
 <div class="topNav">
-    <a class="mainLogo" href="index.html"></a>
-    <a href="shop.html">Shop now</a>
-    <a href="how.html">How it works</a>
-    <a href="business.html">I'm a business</a>
-    <a href="help.html">Help & contact</a>
+    <a class="mainLogo" href="./index.html"></a>
+    <a href="../shop.html">Shop now</a>
+    <a href="../how.html">How it works</a>
+    <a href="../business.html">I'm a business</a>
+    <a href="../help.html">Help & contact</a>
     <div class="topNavRight">
         <a href="https://retailer.myopenpay.com.au/live/Account/Login/">Merchant log in</a>
     </div>
@@ -56,10 +56,10 @@
         <span></span>
         <span></span>
         <ul>
-            <a href="shop.html"><li>Shop now</li></a>
-            <a class="active" href="how.html"><li>How it works</li></a>
-            <a href="business.html"><li>I'm a business</li></a>
-            <a href="help.html"><li>Help & contact</li></a>
+            <a href="../shop.html"><li>Shop now</li></a>
+            <a class="active" href="../how.html"><li>How it works</li></a>
+            <a href="../business.html"><li>I'm a business</li></a>
+            <a href="../help.html"><li>Help & contact</li></a>
             <br>
             <a href="https://retailer.myopenpay.com.au/live/Account/Login/"><li>Merchant log in</li></a>
 
@@ -72,7 +72,7 @@
         <div class="bodyContainer">
             <div class="heroInfo">
                 <div class="bunningsLogo">
-                <img class="bunningsLogo" src="./images/bunningsLogo.png">
+                <img class="bunningsLogo" src="../images/bunningsLogo.png">
             </div>
                 <h1>Buy now, pay smarter at Bunnings.</h1>
                 <p>Finally! You can now get more time to pay for everything you need and want from Bunnings. 
@@ -99,21 +99,21 @@ And now you can use Openpay for anything you need at Bunnings. Whether its a hot
 			<div class="treeBanners">
 				<div class="col-3">
 					<div class="options">
-						<img src="./images/b.png" class="icon">
+						<img src="../images/b.png" class="icon">
 						<h2>1. Shop Bunnings</h2>
 						<p>Get what you want and need today, from DIY essentials, lighting, gardening and more. </p>
 					</div>
 				</div>
 				<div class="col-3">
 					<div class="options">
-						<img src="./images/choose.png" class="icon">
+						<img src="../images/choose.png" class="icon">
 						<h2>2. Choose</h2>
 						<p>Select Openpay as your payment option and create a plan.</p>
 					</div>
 				</div>
 				<div class="col-3">
 					<div class="options">
-						<img src="./images/customise.png" class="icon">
+						<img src="../images/customise.png" class="icon">
 						<h2>3. Customise</h2>
 						<p>Take control by setting your payments to suit your schedule.</p>
 					</div>
@@ -215,10 +215,10 @@ And now you can use Openpay for anything you need at Bunnings. Whether its a hot
             </p>
             <div class="downloadAppWrapper">
                 <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8">
-                    <img class="apple" src="./images/apple.svg">
+                    <img class="apple" src="../images/apple.svg">
                 </a>
                 <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay">
-                    <img class="android" src="./images/android.svg">
+                    <img class="android" src="../images/android.svg">
                 </a>
             </div>
         </div></div>
@@ -243,7 +243,7 @@ And now you can use Openpay for anything you need at Bunnings. Whether its a hot
                 </ol>
             </div>
             <div class="col-2">
-                <img src="./images/bunningsMap.png">
+                <img src="../images/bunningsMap.png">
             </div>
             <div class="clear"></div>
         </div>
@@ -274,42 +274,42 @@ Use Openpay at Bunnings to get the kitchen you really want. You can split the co
         <div class="socialLinks">
 				<span>
 					<a href="https://facebook.com/openpayau" class="footer-icon fb">
-						<img src="./images/social/Fb.svg">
+						<img src="../images/social/Fb.svg">
 						Facebook
 					</a>
 					<a href="https://twitter.com/openpay_" class="footer-icon twit">
-						<img src="./images/social/Twitter.svg">
+						<img src="../images/social/Twitter.svg">
 						Twitter
 					</a>
 				</span>
             <span>
 					<a href="https://au.linkedin.com/company/open-pay" class="footer-icon linked">
-						<img src="./images/social/in.svg">
+						<img src="../images/social/in.svg">
 						LinkedIn
 					</a>
 					<a href="https://www.instagram.com/openpay_" class="footer-icon ig">
-						<img src="./images/social/Insta.svg">
+						<img src="../images/social/Insta.svg">
 						Instagram
 					</a>
 				</span>
         </div>
         <div class="footerAppWrapper">
             <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8">
-                <img class="apple" src="./images/apple.svg">
+                <img class="apple" src="../images/apple.svg">
             </a>
             <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay">
-                <img class="android" src="./images/android.svg">
+                <img class="android" src="../images/android.svg">
             </a>
         </div>
         <div class="footerMoreLinksMenu">
-            <a href="legal.html" class="footerNav">Privacy</a>
-            <a href="legal.html" class="footerNav">Terms & Conditions</a>
-            <a href="legal.html" class="footerNav">User Licence</a>
-            <a href="legal.html" class="footerNav">PCI Data Security</a>
+            <a href="../legal.html" class="footerNav">Privacy</a>
+            <a href="../legal.html" class="footerNav">Terms & Conditions</a>
+            <a href="../legal.html" class="footerNav">User Licence</a>
+            <a href="../legal.html" class="footerNav">PCI Data Security</a>
         </div>
         <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
         <a class="whiteLogo" href="index.html">
-            <img src="./images/openpay_logo_white.svg">
+            <img src="../images/openpay_logo_white.svg">
         </a>
 
     </div>
