missed some linking

--- a/newDesign/bunnings/index.html
+++ b/newDesign/bunnings/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 <div class="topNav">
-    <a class="mainLogo" href="./index.html"></a>
+    <a class="mainLogo" href="../index.html"></a>
     <a href="../shop.html">Shop now</a>
     <a href="../how.html">How it works</a>
     <a href="../business.html">I'm a business</a>
@@ -49,7 +49,7 @@
 </div>
 <!--hamburger menu-->
 <nav role="navigation">
-    <a class="mainLogo" href="index.html"></a>
+    <a class="mainLogo" href="../index.html"></a>
     <div id="hamburgerMenu">
         <input type="checkbox" />
         <span></span>
@@ -308,7 +308,7 @@ Use Openpay at Bunnings to get the kitchen you really want. You can split the co
             <a href="../legal.html" class="footerNav">PCI Data Security</a>
         </div>
         <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
-        <a class="whiteLogo" href="index.html">
+        <a class="whiteLogo" href="../index.html">
             <img src="../images/openpay_logo_white.svg">
         </a>
 
