Fixed Bunnings links and added a new logo on landing page.

--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -85,7 +85,7 @@
 					<img src="./images/feature-three-for-free.png">
 				</div>
 				<div class="col-3">
-					<a href="/bunnings"><img src="./images/featurew-bunnings.png"></a>
+					<a href="bunnings/index.html"><img src="./images/featurew-bunnings.png"></a>
 				</div>
 				<div class="col-3">
 					<a href="https://www.lincraft.com.au/"><img src="./images/feature-lincraft.png"></a>
