--- a/newDesign/404.html
+++ b/newDesign/404.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script>
+			var url = $(location).attr('href');
+			url = url.toLowerCase();
+			var pageName = url.substr(url.href.lastIndexOf('/') + 1);
+			alert(pageName);
+			$.ajax({
+				url: url,
+				method: "HEAD"
+			})
+			.done (function() {
+				window.location = url;
+			})
+	</script>
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,33 +47,33 @@
         })(window,document,window['_fs_namespace'],'script','user');
     </script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,600" rel="stylesheet">
-    <link rel="stylesheet" href="./css/404.css" />
+    <link rel="stylesheet" href="./css/error.css" />
     <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
 <div class="topNav">
-    <a class="mainLogo" href="index.html"></a>
-    <a href="shop.html">Shop now</a>
-    <a href="how.html">How it works</a>
-    <a href="business.html">I'm a business</a>
-    <a href="help.html">Help & contact</a>
+    <a class="mainLogo" href="index"></a>
+    <a href="shop">Shop now</a>
+    <a href="how">How it works</a>
+    <a href="business">I'm a business</a>
+    <a href="help">Help & contact</a>
     <div class="topNavRight">
         <a href="https://retailer.myopenpay.com.au/live/Account/Login/">Merchant log in</a>
     </div>
 </div>
 <!--hamburger menu-->
 <nav role="navigation">
-    <a class="mainLogo" href="index.html"></a>
+    <a class="mainLogo" href="index"></a>
     <div id="hamburgerMenu">
         <input type="checkbox" />
         <span></span>
         <span></span>
         <span></span>
         <ul>
-            <a href="shop.html"><li>Shop now</li></a>
-            <a href="how.html"><li>How it works</li></a>
-            <a href="business.html"><li>I'm a business</li></a>
-            <a href="help.html"><li>Help & contact</li></a>
+            <a href="shop"><li>Shop now</li></a>
+            <a href="how"><li>How it works</li></a>
+            <a href="business"><li>I'm a business</li></a>
+            <a href="help"><li>Help & contact</li></a>
             <br>
             <a href="https://retailer.myopenpay.com.au/live/Account/Login/"><li>Merchant log in</li></a>
 
@@ -72,7 +86,7 @@
         <div class="bodyContainer">
             <h1>Opps, something happened. </h1>
             <p><strong>It's a 404 error.</strong></p>
-            <p>Look's like this page doesn't exist, has been misplaced or been mistyped. <br>Check the URL and try again or <a href="index.html">go back home</a> </p>
+            <p>Look's like this page doesn't exist, has been misplaced or been mistyped. <br>Check the URL and try again or <a href="index">go back home</a> </p>
             
         </div>
         <div class="bodyContainer">
@@ -85,11 +99,11 @@
 
     <div class="footer">
         <div class="footerMenu">
-            <a href="shop.html" class="footerNav">Shop now</a>
-            <a href="how.html" class="footerNav">how it works</a>
-            <a href="business.html" class="footerNav">I'm a business</a>
-            <a href="help.html" class="footerNav">Help & contact</a>
-            <a href="legal.html" class="footerNav">Legal stuff</a>
+            <a href="shop" class="footerNav">Shop now</a>
+            <a href="how" class="footerNav">how it works</a>
+            <a href="business" class="footerNav">I'm a business</a>
+            <a href="help" class="footerNav">Help & contact</a>
+            <a href="legal" class="footerNav">Legal stuff</a>
         </div>
         <div class="socialLinks">
 				<span>
@@ -122,20 +136,18 @@
             </a>
         </div>
         <div class="footerMoreLinksMenu">
-            <a href="legal.html" class="footerNav">Privacy</a>
-            <a href="legal.html" class="footerNav">Terms & Conditions</a>
-            <a href="legal.html" class="footerNav">User Licence</a>
-            <a href="legal.html" class="footerNav">PCI Data Security</a>
+            <a href="legal" class="footerNav">Privacy</a>
+            <a href="legal" class="footerNav">Terms & Conditions</a>
+            <a href="legal" class="footerNav">User Licence</a>
+            <a href="legal" class="footerNav">PCI Data Security</a>
         </div>
         <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
-        <a class="whiteLogo" href="index.html">
+        <a class="whiteLogo" href="index">
             <img src="./images/openpay_logo_white.svg">
         </a>
 
     </div>
 </div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 </body>
 </html>
