--- a/newDesign/404.html
+++ b/newDesign/404.html
@@ -5,7 +5,7 @@
 	<script>
 			var url = $(location).attr('href');
 			url = url.toLowerCase();
-			var pageName = url.substr(url.href.lastIndexOf('/') + 1);
+			var pageName = url.substr(url.lastIndexOf('/') + 1);
 			alert(pageName);
 			$.ajax({
 				url: url,
