--- a/newDesign/3forfree/index.html
+++ b/newDesign/3forfree/index.html
@@ -140,6 +140,14 @@ This offer is only available to approved applicants at selected retailers, until
 
 
 
+        <div class="termsAnd">
+            <p>Approved applicants only. Available for a limited time on 3 month plans at select merchants between
+5 November 2018 and 13 January 2019. Offer may be extended. Before finalising your Openpay purchase, please familiarise yourself with the full Terms and Conditions including applicable fees. This information
+is available from your merchant or at openpay.com.au/australian-terms-conditions.</p>
+        </div>
+
+
+
 
 
 
