--- a/newDesign/bunningsGiveawayTandC.html
+++ b/newDesign/bunningsGiveawayTandC.html
@@ -70,7 +70,7 @@
         <div class="helpContent greyPane">
             <div class="bodyContainer">
                 <div class="section">
-                  
+                    <h1>PCI Data Security Statement</h1>
                     <article class="generic-copy">
                         <div class="typography">
 <div class=WordSection1>
@@ -78,7 +78,7 @@
 <div style='border:none;border-bottom:solid windowtext 1.5pt;padding:0cm 0cm 1.0pt 0cm'>
 
 <p class=MsoNormal align=center style='text-align:center;border:none;
-padding:0cm'><b><span lang=EN-US>Terms and Conditions: Promotions</span></b></p>
+padding:0cm'><b><span lang=EN-US>Terms and Conditions: Games of Chance</span></b></p>
 
 </div>
 
