3 for free update

--- a/src/3forfree/index.html
+++ b/src/3forfree/index.html
@@ -116,6 +116,25 @@ This offer is only available to approved applicants at selected retailers, until
                 <img src="../images/3logos/Spotlight.png"/>
                 <img src="../images/3logos/Rodney_Clark.png"/>
                 <img src="../images/3logos/The_Lab.png"/>
+
+                <img src="../images/3logos/Beds.png"/>
+                <img src="../images/3logos/Edge.png"/>
+                <img src="../images/3logos/Funkycat.png"/>
+                <img src="../images/3logos/House.png"/>
+
+                <img src="../images/3logos/Odeya.png"/>
+                <img src="../images/3logos/PetHouse.png"/>
+                <img src="../images/3logos/Robins.png"/>
+                <img src="../images/3logos/Sandro.png"/>
+
+
+                <img src="../images/3logos/TS.png"/>
+                <img src="../images/3logos/MFT.png"/>
+                <img src="../images/3logos/Sunglass_Culture.png"/>
+                <img src="../images/3logos/sadie.png"/>
+                <img src="../images/3logos/auscamp.png"/>
+                <img src="../images/3logos/badbacks.png"/>
+                
             </div>
             <div class="clear"></div>
         </div>
