--- a/src/3forfree/index.html
+++ b/src/3forfree/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="../images/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Openpay - Bunnings</title>
+    <title>Openpay - 3 For Free</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84225706-1"></script>
     <script>
@@ -119,7 +119,7 @@ This offer is only available to approved applicants at selected retailers, until
 
                 <img src="../images/3logos/Beds.png"/>
                 <img src="../images/3logos/Edge.png"/>
-                <img src="../images/3logos/Funkycat.png"/>
+                <img src="../images/3logos/funkycat.png"/>
                 <img src="../images/3logos/House.png"/>
 
                 <img src="../images/3logos/Odeya.png"/>
@@ -134,7 +134,7 @@ This offer is only available to approved applicants at selected retailers, until
                 <img src="../images/3logos/sadie.png"/>
                 <img src="../images/3logos/auscamp.png"/>
                 <img src="../images/3logos/badbacks.png"/>
-                
+
             </div>
             <div class="clear"></div>
         </div>
