--- a/src/au-terms-competition.html
+++ b/src/au-terms-competition.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PCI Data Security Statement</title>
+    <title>AU Competition Terms & Conditions</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84225706-1"></script>
     <script>
