Updatig removing .html from file names and links

--- a/src/help.html
+++ b/src/help.html
@@ -38,28 +38,28 @@
 </head>
 <body>
 <div class="topNav">
-    <a class="mainLogo" href="index.html"></a>
-    <a href="shop.html">Shop now</a>
-    <a href="how.html">How it works</a>
-    <a href="business.html">I'm a business</a>
-    <a class="active" href="help.html">Help & contact</a>
+    <a class="mainLogo" href="index"></a>
+    <a href="shop">Shop now</a>
+    <a href="how">How it works</a>
+    <a href="business">I'm a business</a>
+    <a class="active" href="help">Help & contact</a>
     <div class="topNavRight">
         <a href="https://retailer.myopenpay.com.au/live/Account/Login/">Merchant log in</a>
     </div>
 </div>
 <!--hamburger menu-->
 <nav role="navigation">
-    <a class="mainLogo" href="index.html"></a>
+    <a class="mainLogo" href="index"></a>
     <div id="hamburgerMenu">
         <input type="checkbox" />
         <span></span>
         <span></span>
         <span></span>
         <ul>
-            <a href="shop.html"><li>Shop now</li></a>
-            <a href="how.html"><li>How it works</li></a>
-            <a href="business.html"><li>I'm a business</li></a>
-            <a class="active" href="help.html"><li>Help & contact</li></a>
+            <a href="shop"><li>Shop now</li></a>
+            <a href="how"><li>How it works</li></a>
+            <a href="business"><li>I'm a business</li></a>
+            <a class="active" href="help"><li>Help & contact</li></a>
             <br>
             <a href="https://retailer.myopenpay.com.au/live/Account/Login/"><li>Merchant log in</li></a>
 
@@ -122,7 +122,7 @@
                 </div>
                 <div class="subSection">
                     <h3>Is my information secure with Openpay?</h3>
-                    <p>Yes, protecting your information is very important to us. Openpay is a Level 1 PCI DSS Compliant Provider. This means that all sensitive information is encrypted and we maintain stringent physical, electronic and procedural safeguards to protect your information. Our privacy policy is available on <a href="au.privacy.html" >this website</a>.</p>
+                    <p>Yes, protecting your information is very important to us. Openpay is a Level 1 PCI DSS Compliant Provider. This means that all sensitive information is encrypted and we maintain stringent physical, electronic and procedural safeguards to protect your information. Our privacy policy is available on <a href="au.privacy" >this website</a>.</p>
                     <a onclick="topFunction()" href="#">Back to top</a>
                 </div>
             </div>
@@ -218,11 +218,11 @@
 
     <div class="footer">
         <div class="footerMenu">
-            <a href="shop.html" class="footerNav">Shop now</a>
-            <a href="how.html" class="footerNav">how it works</a>
-            <a href="business.html" class="footerNav">I'm a business</a>
-            <a href="help.html" class="footerNav">Help & contact</a>
-            <a href="legal.html" class="footerNav">Legal stuff</a>
+            <a href="shop" class="footerNav">Shop now</a>
+            <a href="how" class="footerNav">how it works</a>
+            <a href="business" class="footerNav">I'm a business</a>
+            <a href="help" class="footerNav">Help & contact</a>
+            <a href="legal" class="footerNav">Legal stuff</a>
         </div>
         <div class="socialLinks">
 				<span>
@@ -255,13 +255,13 @@
             </a>
         </div>
         <div class="footerMoreLinksMenu">
-            <a href="legal.html" class="footerNav">Privacy</a>
-            <a href="legal.html" class="footerNav">Terms & Conditions</a>
-            <a href="legal.html" class="footerNav">User Licence</a>
-            <a href="legal.html" class="footerNav">PCI Data Security</a>
+            <a href="legal" class="footerNav">Privacy</a>
+            <a href="legal" class="footerNav">Terms & Conditions</a>
+            <a href="legal" class="footerNav">User Licence</a>
+            <a href="legal" class="footerNav">PCI Data Security</a>
         </div>
         <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
-        <a class="whiteLogo" href="index.html">
+        <a class="whiteLogo" href="index">
             <img src="./images/openpay_logo_white.svg">
         </a>
 
