--- a/src/index.html
+++ b/src/index.html
@@ -40,28 +40,28 @@
 <body>
     <div class="mainContent">
 		<div class="topNav">
-			<a class="mainLogo" href="index.html"></a>
-			<a href="shop.html">Shop now</a>
-			<a href="how.html">How it works</a>
-			<a href="business.html">I'm a business</a>
-			<a href="help.html">Help & contact</a>
+			<a class="mainLogo" href="index"></a>
+			<a href="shop">Shop now</a>
+			<a href="how">How it works</a>
+			<a href="business">I'm a business</a>
+			<a href="help">Help & contact</a>
 			<div class="topNavRight">
 				<a href="https://retailer.myopenpay.com.au/live/Account/Login/">Merchant log in</a>
 			</div>
 		</div>
 		<!--hamburger menu-->
 		<nav role="navigation">
-			<a class="mainLogo" href="index.html"></a>
+			<a class="mainLogo" href="index"></a>
 			<div id="hamburgerMenu">
 				<input type="checkbox" />
 				<span></span>
 				<span></span>
 				<span></span>
 				<ul>
-					<a href="shop.html"><li>Shop now</li></a>
-					<a href="how.html"><li>How it works</li></a>
-					<a href="business.html"><li>I'm a business</li></a>
-					<a href="help.html"><li>Help & contact</li></a>
+					<a href="shop"><li>Shop now</li></a>
+					<a href="how"><li>How it works</li></a>
+					<a href="business"><li>I'm a business</li></a>
+					<a href="help"><li>Help & contact</li></a>
 					<br>
 					<a href="https://retailer.myopenpay.com.au/live/Account/Login/"><li>Merchant log in</li></a>
 
@@ -75,7 +75,7 @@
 				<div class="typeBox">
 					<h1 id='rotating-words' class="txt-rotate" data-period="2000" data-rotate='[ "car services", "glasses","new tyres","dog beds","fresh sheets","physio","bed","cat toys","blender","tents","trampoline","vet bills","new dress","sofa","vacuum","sneakers","toaster","camping gear","activewear", "window tinting","pots and pans","waffle maker" ]'></h1>
 				</div>
-				<div class="btnBox"><a href="shop.html">Shop all stores</a></div>
+				<div class="btnBox"><a href="shop">Shop all stores</a></div>
 			</div>
 		</div>
 		<div class="promotions">
@@ -85,7 +85,7 @@
 					<img src="./images/feature-three-for-free.png">
 				</div>
 				<div class="col-3">
-					<a href="bunnings.html"><img src="./images/featurew-bunnings.png"></a>
+					<a href="bunnings"><img src="./images/featurew-bunnings.png"></a>
 				</div>
 				<div class="col-3">
 					<a href="https://www.lincraft.com.au/"><img src="./images/feature-lincraft.png"></a>
@@ -128,7 +128,7 @@
 			</div>
 			<div class="clear"></div>
 			<div class="learnMoreWrapper">
-				<a class="button" href="how.html">Learn more</a>
+				<a class="button" href="how">Learn more</a>
 			</div>
 			<div class="clear"></div>
 		</div>
@@ -208,11 +208,11 @@
 		<!-- <div class="noInstagram"></div> -->
 		<div class="footer">
 			<div class="footerMenu">
-				<a href="shop.html" class="footerNav">Shop now</a>
-				<a href="how.html" class="footerNav">how it works</a>
-				<a href="business.html" class="footerNav">I'm a business</a>
-				<a href="help.html" class="footerNav">Help & contact</a>
-				<a href="legal.html" class="footerNav">Legal stuff</a>
+				<a href="shop" class="footerNav">Shop now</a>
+				<a href="how" class="footerNav">how it works</a>
+				<a href="business" class="footerNav">I'm a business</a>
+				<a href="help" class="footerNav">Help & contact</a>
+				<a href="legal" class="footerNav">Legal stuff</a>
 			</div>
 			<div class="socialLinks">
 				<span>
@@ -245,13 +245,13 @@
 				</a>
 			</div>
             <div class="footerMoreLinksMenu">
-                <a href="legal.html" class="footerNav">Privacy</a>
-                <a href="legal.html" class="footerNav">Terms & Conditions</a>
-                <a href="legal.html" class="footerNav">User Licence</a>
-                <a href="legal.html" class="footerNav">PCI Data Security</a>
+                <a href="legal" class="footerNav">Privacy</a>
+                <a href="legal" class="footerNav">Terms & Conditions</a>
+                <a href="legal" class="footerNav">User Licence</a>
+                <a href="legal" class="footerNav">PCI Data Security</a>
             </div>
 			<p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
-			<a class="whiteLogo" href="index.html">
+			<a class="whiteLogo" href="index">
 				<img src="./images/openpay_logo_white.svg">
 			</a>
 
