--- a/src/3forfree.html
+++ b/src/3forfree.html
@@ -38,28 +38,28 @@
 </head>
 <body>
 <div class="topNav">
-    <a class="mainLogo" href="./index.html"></a>
-    <a href="./shop.html">Shop now</a>
-    <a href="./how.html">How it works</a>
-    <a href="./business.html">I'm a business</a>
-    <a href="./help.html">Help & contact</a>
+    <a class="mainLogo" href="./index"></a>
+    <a href="./shop">Shop now</a>
+    <a href="./how">How it works</a>
+    <a href="./business">I'm a business</a>
+    <a href="./help">Help & contact</a>
     <div class="topNavRight">
         <a href="https://retailer.myopenpay.com.au/live/Account/Login/">Merchant log in</a>
     </div>
 </div>
 <!--hamburger menu-->
 <nav role="navigation">
-    <a class="mainLogo" href="./index.html"></a>
+    <a class="mainLogo" href="./index"></a>
     <div id="hamburgerMenu">
         <input type="checkbox" />
         <span></span>
         <span></span>
         <span></span>
         <ul>
-            <a href="./shop.html"><li>Shop now</li></a>
-            <a class="active" href="./how.html"><li>How it works</li></a>
-            <a href="./business.html"><li>I'm a business</li></a>
-            <a href="./help.html"><li>Help & contact</li></a>
+            <a href="./shop"><li>Shop now</li></a>
+            <a class="active" href="./how"><li>How it works</li></a>
+            <a href="./business"><li>I'm a business</li></a>
+            <a href="./help"><li>Help & contact</li></a>
             <br>
             <a href="https://retailer.myopenpay.com.au/live/Account/Login/"><li>Merchant log in</li></a>
 
@@ -81,7 +81,7 @@
         <div class="bodyContainer">
             <h1>A special gift for you…</h1>
             <p>To help make December shopping a little easier, we’re giving you three months to pay for all your shopping, with no fees and no interest!
-This offer is only available to approved applicants at selected retailers, until the 13th of January 2019. Full terms and conditions relating to the use of Openpay can be found <a href="./legal.html" style="color: #2864FF"> here.</a></p>
+This offer is only available to approved applicants at selected retailers, until the 13th of January 2019. Full terms and conditions relating to the use of Openpay can be found <a href="./legal" style="color: #2864FF"> here.</a></p>
 
         </div>
     </div>
@@ -172,11 +172,11 @@ is available from your merchant or at openpay.com.au/australian-terms-conditions
 
     <div class="footer">
         <div class="footerMenu">
-            <a href="shop.html" class="footerNav">Shop now</a>
-            <a href="how.html" class="footerNav">how it works</a>
-            <a href="business.html" class="footerNav">I'm a business</a>
-            <a href="help.html" class="footerNav">Help & contact</a>
-            <a href="legal.html" class="footerNav">Legal stuff</a>
+            <a href="shop" class="footerNav">Shop now</a>
+            <a href="how" class="footerNav">how it works</a>
+            <a href="business" class="footerNav">I'm a business</a>
+            <a href="help" class="footerNav">Help & contact</a>
+            <a href="legal" class="footerNav">Legal stuff</a>
         </div>
         <div class="socialLinks">
 				<span>
@@ -209,13 +209,13 @@ is available from your merchant or at openpay.com.au/australian-terms-conditions
             </a>
         </div>
         <div class="footerMoreLinksMenu">
-            <a href="./legal.html" class="footerNav">Privacy</a>
-            <a href="./legal.html" class="footerNav">Terms & Conditions</a>
-            <a href="./legal.html" class="footerNav">User Licence</a>
-            <a href="./legal.html" class="footerNav">PCI Data Security</a>
+            <a href="./legal" class="footerNav">Privacy</a>
+            <a href="./legal" class="footerNav">Terms & Conditions</a>
+            <a href="./legal" class="footerNav">User Licence</a>
+            <a href="./legal" class="footerNav">PCI Data Security</a>
         </div>
         <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
-        <a class="whiteLogo" href="./index.html">
+        <a class="whiteLogo" href="./index">
             <img src="./images/openpay_logo_white.svg">
         </a>
 
