--- a/src/business.html
+++ b/src/business.html
@@ -38,28 +38,28 @@
 </head>
 <body>
 <div class="topNav">
-    <a class="mainLogo" href="index.html"></a>
-    <a href="shop.html">Shop now</a>
-    <a href="how.html">How it works</a>
-    <a class="active" href="business.html">I'm a business</a>
-    <a href="help.html">Help & contact</a>
+    <a class="mainLogo" href="index"></a>
+    <a href="shop">Shop now</a>
+    <a href="how">How it works</a>
+    <a class="active" href="business">I'm a business</a>
+    <a href="help">Help & contact</a>
     <div class="topNavRight">
         <a href="https://retailer.myopenpay.com.au/live/Account/Login/">Merchant log in</a>
     </div>
 </div>
 <!--hamburger menu-->
 <nav role="navigation">
-    <a class="mainLogo" href="index.html"></a>
+    <a class="mainLogo" href="index"></a>
     <div id="hamburgerMenu">
         <input type="checkbox" />
         <span></span>
         <span></span>
         <span></span>
         <ul>
-            <a href="shop.html"><li>Shop now</li></a>
-            <a href="how.html"><li>How it works</li></a>
-            <a class="active" href="business.html"><li>I'm a business</li></a>
-            <a href="help.html"><li>Help & contact</li></a>
+            <a href="shop"><li>Shop now</li></a>
+            <a href="how"><li>How it works</li></a>
+            <a class="active" href="business"><li>I'm a business</li></a>
+            <a href="help"><li>Help & contact</li></a>
             <br>
             <a href="https://retailer.myopenpay.com.au/live/Account/Login/"><li>Merchant log in</li></a>
 
@@ -82,7 +82,7 @@
                     <!--Hi%20Openpay,%0d%0dI'd%20like%20to%20know%20more%20about%20providing%20Openpay%20to%20our%20customers. %0d%0dHere%20are%20my%20details: %0d%0dBusiness%20Name:%20%20%0dBusiness%20Trading%20Names:%20%20%0dContact%20Name:%20%20%0dContact%20Number:%20%20%0dContact%20e-mail:%20%20%0dContact%20Position:%20%20%0dIndustry:%20%20%0dEntity%20Ownership%20Structure:%20%20%0dFranchisee:%20%20%0dFranchise%20Group%20Name:%20%20%0dDo%20you%20have%20a%20Parent%20Company:%20%20%0dParent%20Company%20Name:%20%20%0dAre%20you%20part%20of%20an%20Industry%20Group%20or%20Association?:%20%20%0dIndustry%20Group%20or%20Association%20Name:%20%20%0dStreet:%20%20%20%0dSuburb:%20%20%0dZip/Post%20Code:%20%20%0dState:%20%20%0dCountry:%20%20%0dNumber%20of%20Locations:%20%20%0dDate%20entity%20started%20trading:%20%20%0dSales%20Channels:%20%20%0dAnnual%20Turnover:%20%20%0dAverage%20Transaction%20Value:%20%20%0dNotes%20–%20Additional%20Information:%20%20%0dTerms%20and%20Conditions%20Agreed:%20%20%0dABN:%20%20%0dACN:%20%20%0dProduct%20Liability%20Insurance:%20%20%0dProfessional%20Indemnity%20Insurance:%20%20%0dProfessional%20Liability%20Insurance:%20%20%0dMinimum%20Transaction%20Value:%20%20%0dMaximum%20Transaction%20Value:%20%20%0d%0dFull%20name%20(s):%20%20%0dDate%20of%20Birth:%20%20%0dDriver’s%20License%20number:%20%20%0dTrust%20Deed:%20%20-->
 
                     <!--">Register your interest</a>-->
-                    <a href="register.html">Register your interest</a>
+                    <a href="register">Register your interest</a>
 
                 </div>
             </div>
@@ -235,17 +235,17 @@
 <!--Hi%20Openpay,%0d%0dI'd%20like%20to%20know%20more%20about%20providing%20Openpay%20to%20our%20customers. %0d%0dHere%20are%20my%20details: %0d%0dBusiness%20Name:%20%20%0dBusiness%20Trading%20Names:%20%20%0dContact%20Name:%20%20%0dContact%20Number:%20%20%0dContact%20e-mail:%20%20%0dContact%20Position:%20%20%0dIndustry:%20%20%0dEntity%20Ownership%20Structure:%20%20%0dFranchisee:%20%20%0dFranchise%20Group%20Name:%20%20%0dDo%20you%20have%20a%20Parent%20Company:%20%20%0dParent%20Company%20Name:%20%20%0dAre%20you%20part%20of%20an%20Industry%20Group%20or%20Association?:%20%20%0dIndustry%20Group%20or%20Association%20Name:%20%20%0dStreet:%20%20%20%0dSuburb:%20%20%0dZip/Post%20Code:%20%20%0dState:%20%20%0dCountry:%20%20%0dNumber%20of%20Locations:%20%20%0dDate%20entity%20started%20trading:%20%20%0dSales%20Channels:%20%20%0dAnnual%20Turnover:%20%20%0dAverage%20Transaction%20Value:%20%20%0dNotes%20–%20Additional%20Information:%20%20%0dTerms%20and%20Conditions%20Agreed:%20%20%0dABN:%20%20%0dACN:%20%20%0dProduct%20Liability%20Insurance:%20%20%0dProfessional%20Indemnity%20Insurance:%20%20%0dProfessional%20Liability%20Insurance:%20%20%0dMinimum%20Transaction%20Value:%20%20%0dMaximum%20Transaction%20Value:%20%20%0d%0dFull%20name%20(s):%20%20%0dDate%20of%20Birth:%20%20%0dDriver’s%20License%20number:%20%20%0dTrust%20Deed:%20%20-->
 
 <!--">Register your interest</a>-->
-                <a href="register.html">Register your interest</a>
+                <a href="register">Register your interest</a>
             </div>
         </div>
     </div>
     <div class="footer">
         <div class="footerMenu">
-            <a href="shop.html" class="footerNav">Shop now</a>
-            <a href="how.html" class="footerNav">how it works</a>
-            <a href="business.html" class="footerNav">I'm a business</a>
-            <a href="help.html" class="footerNav">Help & contact</a>
-            <a href="legal.html" class="footerNav">Legal stuff</a>
+            <a href="shop" class="footerNav">Shop now</a>
+            <a href="how" class="footerNav">how it works</a>
+            <a href="business" class="footerNav">I'm a business</a>
+            <a href="help" class="footerNav">Help & contact</a>
+            <a href="legal" class="footerNav">Legal stuff</a>
         </div>
         <div class="socialLinks">
 				<span>
@@ -278,13 +278,13 @@
             </a>
         </div>
         <div class="footerMoreLinksMenu">
-            <a href="legal.html" class="footerNav">Privacy</a>
-            <a href="legal.html" class="footerNav">Terms & Conditions</a>
-            <a href="legal.html" class="footerNav">User Licence</a>
-            <a href="legal.html" class="footerNav">PCI Data Security</a>
+            <a href="legal" class="footerNav">Privacy</a>
+            <a href="legal" class="footerNav">Terms & Conditions</a>
+            <a href="legal" class="footerNav">User Licence</a>
+            <a href="legal" class="footerNav">PCI Data Security</a>
         </div>
         <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
-        <a class="whiteLogo" href="index.html">
+        <a class="whiteLogo" href="index">
             <img src="./images/openpay_logo_white.svg">
         </a>
 
