--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
 			<h1>Featured Promotions</h1>
 			<div class="treeBanners">
 				<div class="col-3">
-					<img src="./images/feature-three-for-free.png">
+					<a href="3forfree">  <img src="./images/feature-three-for-free.png"></a>
 				</div>
 				<div class="col-3">
 					<a href="bunnings"><img src="./images/featurew-bunnings.png"></a>
