Legal Updated links/pages

--- a/src/legal.html
+++ b/src/legal.html
@@ -79,13 +79,25 @@
             
             <div class="section">
                 <h2>The usual suspects</h2>
-                <a href="au.privacy">Privacy Policy </a><br>
-                <a href="au.terms">AU Terms & Conditions </a><br>
-                <a href="nz.terms">NZ Terms & Conditions </a><br>
-                <a href="au.user-licence">End User License Agreement</a><br>
-                <a href="au.pci-security">PCI Data Security Statement</a><br>
-                <a href="au.terms-competition">Terms and Conditions: Promotions</a><br>
+                <a href="au-privacy">Privacy Policy </a><br>
+                <a href="australian-terms-conditions">AU Terms & Conditions </a><br>
+                <a href="nz-terms">NZ Terms & Conditions </a><br>
+                <a href="au-user-licence">End User License Agreement</a><br>
+                <a href="au-pci-security">PCI Data Security Statement</a><br>
+                <a href="au-terms-competition">Terms and Conditions: Promotions</a><br>
             </div>
+
+<p> </br> </br> </p>
+        <div class="section">
+                <h2>Further terms</h2>
+                <a href="au-terms-bunningsgiveaway"> Terms & Conditions Bunnings Giveaway</a><br>
+                <a href="au-terms-giftcards">Terms & Conditions Games of Skill</a><br>
+ 
+            </div>
+
+
+
+
         </div>
         
     </div>
