--- a/src/shop.html
+++ b/src/shop.html
@@ -151,7 +151,7 @@
             <h1>Featured Retailers</h1>
             <div class="treeBanners">
 		 <div class="col-3">
-			<a href="3frorfree"> <img src="./images/feature-three-for-free.png"></a>
+			<a href="3forfree"> <img src="./images/feature-three-for-free.png"></a>
 		</div>
 		<div class="col-3">
 			<a href="bunnings"><img src="./images/featurew-bunnings.png"></a>
