--- a/src/legal.html
+++ b/src/legal.html
@@ -84,15 +84,15 @@
                 <a href="nz-terms">NZ Terms & Conditions </a><br>
                 <a href="au-user-licence">End User License Agreement</a><br>
                 <a href="au-pci-security">PCI Data Security Statement</a><br>
-                <a href="au-terms-competition">Terms and Conditions: Promotions</a><br>
+                <a href="au-terms-autosurvey">Terms and Conditions: Promotions</a><br>
             </div>
 
 <p> </br> </br> </p>
         <div class="section">
                 <h2>Further terms</h2>
                 <a href="au-terms-bunningsgiveaway"> Terms & Conditions Bunnings Giveaway</a><br>
-                <a href="au-terms-giftcards">Terms & Conditions Games of Skill</a><br>
- 
+                <!--<a href="au-terms-bunningsgiveaway"> Terms & Conditions Gift Cards</a><br> -->
+
             </div>
 
 
