--- a/src/how.html
+++ b/src/how.html
@@ -154,7 +154,7 @@
             <h1>Featured Retailers</h1>
             <div class="treeBanners">
 		<div class="col-3">
-			<img src="./images/feature-three-for-free.png">
+			<a href="3forfree"><img src="./images/feature-three-for-free.png"></a>
 		</div>
         <div class="col-3">
             <a href="bunnings"><img src="./images/featurew-bunnings.png"></a>
