--- a/src/legal.html
+++ b/src/legal.html
@@ -91,7 +91,7 @@
         <div class="section">
                 <h2>Further terms</h2>
                 <a href="au-terms-bunningsgiveaway"> Terms & Conditions Bunnings Giveaway</a><br>
-                <!--<a href="au-terms-bunningsgiveaway"> Terms & Conditions Gift Cards</a><br> -->
+                <a href="au-terms-giftcards"> Terms & Conditions Gift Cards</a><br>
 
             </div>
 
