Promotions link updated

--- a/src/legal.html
+++ b/src/legal.html
@@ -84,7 +84,7 @@
                 <a href="nz-terms">NZ Terms & Conditions </a><br>
                 <a href="au-user-licence">End User License Agreement</a><br>
                 <a href="au-pci-security">PCI Data Security Statement</a><br>
-                <a href="au-terms-autosurvey">Terms and Conditions: Promotions</a><br>
+                <a href="au-terms-promotions">Terms and Conditions: Promotions</a><br>
             </div>
 
 <p> </br> </br> </p>
