Changed "select category" to "all categories" to represent the state of the results shown.

--- a/src/shop.html
+++ b/src/shop.html
@@ -129,7 +129,7 @@
                     <!--<option value="Bathurst">Bathurst</option>-->
                 <!--</select>-->
                 <select class="category" id="category">
-                    <option value>Select Category</option>
+                    <option value>All Categories</option>
                     <option value="209002">Health &amp; Wellbeing</option>
                     <option value="209003">Fashion</option>
                     <option value="209004">Lifestyle</option>
