Event for outbound Brand website clicks/taps

--- a/src/shop-brand.html
+++ b/src/shop-brand.html
@@ -122,7 +122,7 @@
                     <span id="category"></span> · <span id="subcategory"></span>
                 </p>
                 <div class="brand-action">
-                    <a href="" id="url" target="_blank" rel="noopener noreferrer">
+                    <a href="" id="url" onclick=”ga(‘send’, ‘event’, ‘Outbound’, ‘Brand Website’);” target="_blank" rel="noopener noreferrer">
                         <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
                             <g stroke-width="1.947" transform="translate(1.474 1.22)" stroke="#2864FF" fill="none"
                                fill-rule="evenodd">
