--- a/src/shop.html
+++ b/src/shop.html
@@ -125,12 +125,12 @@
                     <!--<option value="Melbourne">Melbourne</option>-->
                     <!--<option value="Sydney">Sydney</option>-->
                     <!--<option value="Orange">Orange</option>-->
-                    <!--<option value="Albury">Albury</option>-->
+                    <!--<option value="Albury">Albury</option>--> 
                     <!--<option value="Bathurst">Bathurst</option>-->
-                <!--</select>-->
+                <!--</select>--> 
                 <select class="category" id="category">
                     <option value>All Categories</option>
-                    <option value="209002">Health &amp; Wellbeing</option>
+                    <option value="209002">Health &amp; Wellbeing</option>  
                     <option value="209003">Fashion</option>
                     <option value="209004">Lifestyle</option>
                     <option value="209007">Beauty</option>
@@ -380,10 +380,10 @@
 				</span>
         </div>
         <div class="footerAppWrapper">
-            <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8">
+            <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick=”ga(‘send’, ‘event’, ‘App’, ‘iOS’, ‘Footer’);”>
                 <img class="apple" src="./images/apple.svg">
             </a>
-            <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay">
+            <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick=”ga(‘send’, ‘event’, ‘App’, ‘Android’, ‘Footer’);”>
                 <img class="android" src="./images/android.svg">
             </a>
         </div>
