Fixed encoding error of copyright symbol in footer and changed order of address where it appears.

--- a/src/business.html
+++ b/src/business.html
@@ -283,7 +283,7 @@
             <a href="legal" class="footerNav">User Licence</a>
             <a href="legal" class="footerNav">PCI Data Security</a>
         </div>
-        <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
+        <p>&#169; Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
         <a class="whiteLogo" href="index">
             <img src="./images/openpay_logo_white.svg">
         </a>
