--- a/src/3forfree.html
+++ b/src/3forfree.html
@@ -214,7 +214,7 @@ is available from your merchant or at openpay.com.au/australian-terms-conditions
             <a href="./legal" class="footerNav">User Licence</a>
             <a href="./legal" class="footerNav">PCI Data Security</a>
         </div>
-        <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
+        <p>&#169; Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
         <a class="whiteLogo" href="./index">
             <img src="./images/openpay_logo_white.svg">
         </a>
