--- a/src/au-terms-promotions.html
+++ b/src/au-terms-promotions.html
@@ -760,7 +760,7 @@ lang=EN-US>&nbsp;</span></p>
                 <a href="legal" class="footerNav">User Licence</a>
                 <a href="legal" class="footerNav">PCI Data Security</a>
             </div>
-            <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
+            <p>&#169; Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
             <a class="whiteLogo" href="index">
                 <img src="./images/openpay_logo_white.svg">
             </a>
