Event tracking - Found extra download buttons for app downloads

--- a/src/realestate/index.html
+++ b/src/realestate/index.html
@@ -39,8 +39,8 @@
 					<div class="mid-info">Speak to your agent for more details and for a copy of Openpay's full real estate terms and conditions. Approved applicants only, lending criteria applies.</div>
 					<div class="tiny-info">Interested in offering Openpay for your vendors? Email us for more details realestate@openpay.com.au</div>
 					<div class="DL">
-						<a class="appleDL" href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8"></a>
-						<a class="androidDL" href="https://play.google.com/store/apps/details?id=com.ocean.openpay"></a>
+						<a class="appleDL" href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick="ga('send', 'event', 'App', 'iOS', 'Real Estate');"></a>
+						<a class="androidDL" href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Real Estate');"></a>
 					</div>
 				</div>
 			</div>
