--- a/src/3forfree.html
+++ b/src/3forfree.html
@@ -148,10 +148,10 @@ This offer is only available to approved applicants at selected retailers, until
                 Simply scan your unique barcode at checkout and set up your plan! Download today. 
             </p>
             <div class="downloadAppWrapper">
-                <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick=”ga(‘send’, ‘event’, ‘App’, ‘Android’, ‘Bunnings’);”>
+                <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick="ga('send', 'event', 'App', 'iOS', '3 for Free');">
                     <img class="apple" src="./images/apple.svg">
                 </a>
-                <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Footer');">
+                <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay"  onclick="ga('send', 'event', 'App', 'Android', '3 for Free');">
                     <img class="android" src="./images/android.svg">
                 </a>
             </div>
