--- a/src/bunnings.html
+++ b/src/bunnings.html
@@ -214,10 +214,10 @@ And now you can use Openpay for anything you need at Bunnings. Whether its a hot
                 Simply scan your unique barcode at checkout and set up your plan! Download today. 
             </p>
             <div class="downloadAppWrapper">
-                <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick=”ga(‘send’, ‘event’, ‘App’, ‘Android’, ‘Bunnings’);”>
+                <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick="ga('send', 'event', 'App', 'Android', 'Bunnings');">
                     <img class="apple" src="./images/apple.svg">
                 </a>
-                <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Footer');">
+                <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Bunnings');">
                     <img class="android" src="./images/android.svg">
                 </a>
             </div>
