--- a/src/index.html
+++ b/src/index.html
@@ -191,10 +191,10 @@
 				get exclusive offers from your favorite brands.
 			</p>
 			<div class="downloadAppWrapper">
-				<a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick=”ga(‘send’, ‘event’, ‘App’, ‘iOS’, ‘Home’);”>
+				<a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick="ga('send', 'event', 'App', 'iOS', 'Home');">
 					<img class="apple" src="./images/apple.svg">
 				</a>
-				<a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick=”ga(‘send’, ‘event’, ‘App’, ‘Android’, ‘Home’);”>
+				<a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Home');">
 					<img class="android" src="./images/android.svg">
 				</a>
 			</div>
