--- a/src/ultratune/index.html
+++ b/src/ultratune/index.html
@@ -173,8 +173,8 @@
 				<div class="download-app">
 					<span>Download App</span>
 					<div class="btncontainer">
-						<a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" target="_blank"><i class="fa fa-android"></i></a>
-						<a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" target="_blank"><i class="fa fa-apple"></i></a>
+						<a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'iOS', 'Ultra Tune');" target="_blank"><i class="fa fa-android"></i></a>
+						<a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick="ga('send', 'event', 'App', 'Android', 'Ultra Tune');" target="_blank"><i class="fa fa-apple"></i></a>
 					</div>
 				</div>
 			</div>
