Event tracking for Contact phone and email.

--- a/src/help.html
+++ b/src/help.html
@@ -202,13 +202,13 @@
                     <img class="iconEmail" src="./images/iconEmail.svg">
                     <h2>Email Us</h2>
                     <p>For non-urgent and general help, contact by email. we'll get back to promptly.</p>
-                    <div class="btnBox"><a href="mailto:info@openpay.com.au">info@openpay.com.au</a></div>
+                    <div class="btnBox"><a href="mailto:info@openpay.com.au" onclick="ga('send', 'event', 'Contact Us', 'Email');">info@openpay.com.au</a></div>
                 </div>
                 <div class="col-2">
                     <img class="iconPhone" src="./images/iconPhone.svg">
                     <h2>Call Us</h2>
                     <p>If you need urgent assistance, contact one of our friendly support staff to assist you.</p>
-                    <div class="btnBox"><a href="tel:1300168359">1300 168 359</a></div>
+                    <div class="btnBox"><a href="tel:1300168359" onclick="ga('send', 'event', 'Contact Us', 'Phone');">1300 168 359</a></div>
                 </div>
                 <div class="clear"></div>
             </div>
