--- a/src/how.html
+++ b/src/how.html
@@ -44,7 +44,7 @@
     <a href="business">I'm a business</a>
     <a href="help">Help & contact</a>
     <div class="topNavRight">
-        <a href="https://retailer.myopenpay.com.au/live/Account/Login/">Merchant log in</a>
+        <a href="https://retailer.myopenpay.com.au/live/Account/Login/" onclick="ga('send', 'event', 'Outbound', 'Merchant Log in');">Merchant log in</a>
     </div>
 </div>
 <!--hamburger menu-->
