Add Bunnings Competition

--- a/src/bunnings.html
+++ b/src/bunnings.html
@@ -227,6 +227,35 @@ And now you can use Openpay for anything you need at Bunnings. Whether its a hot
 
 
 
+
+<div class="howItWorks">
+        <div class="bodyContainer">
+            <div class="twoPanes">
+            <div class="col-2">
+                <ol class="list-group">
+
+                        <div>
+                            <h1 style="text-align: left; padding-left: 0; padding-bottom: 35px;">Snag a BBQ in time for summer.*</h1>
+                            <p>Summer is here! To celebrate, we’re giving away a BBQ up to the value of $1000 every week until Australia Day. 
+Simply use Openpay at Bunnings to go into the weekly draw!</p>
+                        </div>
+<div style="padding-top: 50px;"> <img src="./images/sizzle.png"> </div>              
+                   
+                </ol>
+            </div>
+            <div class="col-2">
+                <img src="./images/bunningsWin.png">
+            </div>
+            <div class="clear"></div>
+        </div>
+        </div>
+    </div>
+
+
+
+
+
+
         <div class="howItWorks">
         <div class="bodyContainer">
             <div class="twoPanes">
