--- a/src/bunnings.html
+++ b/src/bunnings.html
@@ -264,7 +264,7 @@ Simply use Openpay at Bunnings to go into the weekly draw!</p>
                    
                         <div>
                             <h1 style="text-align: left; padding-left: 0; padding-bottom: 35px;">Find your closest Bunnings</h1>
-                            <p>With 100’s of locations across Australia., your DIY dreams are closer than you think. </p>
+                            <p>With 100’s of locations across Australia, your DIY dreams are closer than you think. </p>
                         </div>
                          <div class="btnBox"><a href="https://www.bunnings.com.au/stores">Visit the store finder</a></div>
                 
