Lizzie Copy edits

--- a/src/business.html
+++ b/src/business.html
@@ -71,9 +71,9 @@
         <div class="greyWithOpacity"></div>
         <div class="bodyContainer">
             <div class="heroInfo">
-                <h1>Enable new audiences</h1>
+                <h1>Generate new customers. Increase sales.</h1>
                 <p>
-                    Let existing and new customers choose how they want to pay. 
+                    Let existing and new customers choose how they want to pay 
                 </p>
                 <div class="btnBox">
 
@@ -95,7 +95,7 @@
             <div class="col-4">
                 <div class="whyUseOpenpayIcon chart"></div>
                 <h2>
-                    Increase ATV & conversion
+                    Increase ATV (average transaction value) & conversion
                 </h2>
                 <p>
                     Consumers are more comfortable spending more when they have more time to pay and no scary interest.
@@ -116,7 +116,7 @@
                     Zero Risk
                 </h2>
                 <p>
-                    We pay you the next business day in full, less our fee, which helps your case flow management.
+                    We pay you the next business day in full, less our fee.
                 </p>
             </div>
             <div class="col-4">
