--- a/src/how.html
+++ b/src/how.html
@@ -73,7 +73,13 @@
             <div class="heroInfo">
                 <h1>Empowering you to pay.</h1>
                 <p>We are a buy now, pay later service with a difference. With longer terms across a variety of industries, we allow you to pay over time for the things you need and want.</p>
+                <div class="btnBox">
+                    <a href="www.onelink.to/opepnay">Start now</a>
+
+                </div>
             </div>
+
+             
         </div>
     </div>
     <div class="intrigued">
