--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
 			</div>
 		</div>
 		<div class="promotions">
-			<h1>Featured Promotions</h1>
+			<h1>News & promotions</h1>
 			<div class="treeBanners">
 				<div class="col-3">
 					<a href="3forfree">  <img src="./images/feature-three-for-free.png"></a>
@@ -98,7 +98,7 @@
 			<p>
 				Whether you're shopping for clothes, servicing your car or taking care of your health, have it today with more time to pay.
                 <br>
-				Interest-free, flexible payment plans for everything you want, need and love. Because why pay today when you could pay smarter?
+				Interest-free, flexible payment plans for everything you want, need and love. Why pay today when you could pay smarter?
 			</p>
 		</div>
 		<div class="howItWorks">
@@ -108,21 +108,21 @@
 					<div class="options">
 						<img src="./images/card.png" class="icon">
 						<h2>Join the club</h2>
-						<p><a href="#download">Download the app</a>, register for an account, and get instantly approved.</p>
+						<p><a href="#download">Download the app</a>, sign up and gain instant approval.</p>
 					</div>
 				</div>
 				<div class="col-3">
 					<div class="options">
 						<img src="./images/basket.png" class="icon">
-						<h2>What you want</h2>
-						<p>Take more time to pay when you shop online or instore. Always interest free.</p>
+						<h2>Go shopping</h2>
+						<p>Shop online or in-store and choose Openpay at the checkout. Always interest free. </p>
 					</div>
 				</div>
 				<div class="col-3">
 					<div class="options">
 						<img src="./images/touch.png" class="icon">
-						<h2>Click & Control</h2>
-						<p>Customize your payment plan to your schedule. All from your own pocket.</p>
+						<h2>Do it your way</h2>
+						<p>Customise your payment plan to suit you all from your Openpay app. </p>
 					</div>
 				</div>
 			</div>
@@ -133,7 +133,7 @@
 			<div class="clear"></div>
 		</div>
 		<div class="whereCanShop byCategory">
-			<h1>So where can I shop?</h1>
+			<h1>Where can I shop?</h1>
 			<div class="fourBanners">
 				<div class="col-4">
 					<div class="marketToProvide cat-1" data-value="209002">
