Copy updates/button addditions

--- a/src/business.html
+++ b/src/business.html
@@ -75,7 +75,7 @@
                 <p>
                     Let existing and new customers choose how they want to pay 
                 </p>
-                <div class="btnBox">
+                <div style="margin-right: 5px;" class="btnBox">
 
 
                     <!--<a href="mailto:info@openpay.com.au?subject=Website Merchant Enquiry&body=-->
@@ -83,6 +83,10 @@
 
                     <!--">Register your interest</a>-->
                     <a href="register">Register your interest</a>
+
+                </div>
+                     <div class="btnBoxContact">
+                    <a href="http://unbouncepages.com/openpaycontact/">Contact us</a>
 
                 </div>
             </div>
