--- a/src/how.html
+++ b/src/how.html
@@ -160,14 +160,14 @@
             <h1>Featured Retailers</h1>
             <div class="treeBanners">
 		<div class="col-3">
-			<a href="3forfree"><img src="./images/feature-three-for-free.png"></a>
-		</div>
-        <div class="col-3">
-            <a href="bunnings"><img src="./images/featurew-bunnings.png"></a>
-        </div>
-        <div class="col-3">
-            <a href="https://www.lincraft.com.au/"><img src="./images/feature-lincraft.png"></a>
-        </div>
+                    <a>  <img src="./images/TOMS.png"></a>
+                </div>
+                <div class="col-3">
+                    <a>  <img src="./images/Timbuk2.png"></a>
+                </div>
+                <div class="col-3">
+                    <a href="bunnings"><img src="./images/Bunnings Reg.png"></a>
+                </div>
             </div>
             <div class="clear"></div>
         </div>
@@ -175,7 +175,7 @@
     <div class="footer">
         <div class="footerMenu">
             <a href="shop" class="footerNav">Shop now</a>
-            <a href="how" class="footerNav">how it works</a>
+            <a href="how" class="footerNav">How it works</a>
             <a href="business" class="footerNav">I'm a business</a>
             <a href="help" class="footerNav">Help & contact</a>
             <a href="legal" class="footerNav">Legal stuff</a>
