--- a/src/index.html
+++ b/src/index.html
@@ -82,14 +82,17 @@
 			<h1>News & promotions</h1>
 			<div class="treeBanners">
 				<div class="col-3">
-					<a href="3forfree">  <img src="./images/feature-three-for-free.png"></a>
+					<a>  <img src="./images/TOMS.png"></a>
 				</div>
 				<div class="col-3">
-					<a href="bunnings"><img src="./images/featurew-bunnings.png"></a>
+					<a>  <img src="./images/Timbuk2.png"></a>
 				</div>
 				<div class="col-3">
+					<a href="bunnings"><img src="./images/Bunnings Reg.png"></a>
+				</div>
+				<!--<div class="col-3">
 					<a href="https://www.lincraft.com.au/"><img src="./images/feature-lincraft.png"></a>
-				</div>
+				</div>-->
 			</div>
 			<div class="clear"></div>
 		</div>
