--- a/src/business.html
+++ b/src/business.html
@@ -246,7 +246,7 @@
     <div class="footer">
         <div class="footerMenu">
             <a href="shop" class="footerNav">Shop now</a>
-            <a href="how" class="footerNav">how it works</a>
+            <a href="how" class="footerNav">How it works</a>
             <a href="business" class="footerNav">I'm a business</a>
             <a href="help" class="footerNav">Help & contact</a>
             <a href="legal" class="footerNav">Legal stuff</a>
